<resources>
    <string name="app_name">Movie Trivia</string>
    <string name="edit_message">Enter a Message</string>
    <string name="button_send">Send</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="QuestionText">Insert Question Text Here\nMulti Line Question\nMultiLine</string>

    /** Buttons */
    <string name="nextQuestion">Next Question</string>
    <string name="submitQuesiton">Submit Question</string>
    <string name="Quit">Quit</string>
    <string name="Answer1">Answer 1</string>
    <string name="Answer2">Answer 2</string>
    <string name="Answer3">Answer 3</string>
    <string name="Answer4">Answer 4</string>
    <string name="Try_Again">Try again</string>
    <string name="Out_of_Questions">Out of Questions</string>
    <string name="Next_Questions">NEXT QUESTION</string>
    <string name="Enter_Question_Parts">Enter your question parts into their respective fields and press \"Submit Question\" when you are done.</string>
    <string name="Question_Req">A Question requires a few things if you wish to make one. First what type of question do you wish to make?</string>
    <string name="question_txt">Question Text</string>
    <string name="ansA">Answer A</string>
    <string name="ansB">Answer B</string>
    <string name="ansC">Answer C</string>
    <string name="ansD">Answer D</string>
    <string name="ans">Answer</string>
    <string name="hint">Hint</string>
    <string name="submit_Question">Submit Question</string>
    <string name="main_menu">Main Menu</string>
</resources>
