<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#5de0ef">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Question_Req"
        android:id="@+id/desc"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Easy"
        android:id="@+id/ele"
        android:onClick="onEleClicked"
        android:layout_below="@+id/desc"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Standard"
        android:onClick="onStandardClicked"
        android:id="@+id/stand"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Advanced"
        android:onClick="onAdvancedClicked"
        android:id="@+id/adv"
        android:layout_below="@+id/stand"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/QuestionText"
            android:text="@string/question_txt"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="147dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ansA"
            android:text="@string/ansA"
            android:layout_below="@+id/QuestionText"
            android:layout_alignParentStart="true"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ansB"
            android:text="@string/ansB"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ansC"
            android:text="@string/ansC"
            android:layout_below="@+id/ansB"
            android:layout_alignParentStart="true"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ansD"
            android:text="@string/ansD"
            android:layout_below="@+id/ansC"
            android:layout_alignEnd="@+id/ansC"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ans"
            android:layout_below="@+id/ansD"
            android:layout_alignParentStart="true"
            android:text="@string/ans"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hint"
            android:layout_below="@+id/ans"
            android:layout_alignParentStart="true"
            android:text="@string/hint"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_Question"
            android:id="@+id/Submit_Question"
            android:onClick="onSubmitQuestionClicked"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="19dp"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_menu"
            android:onClick = "onReturnToMainClicked"
            android:id="@+id/returnToMain"
            android:layout_marginEnd="45dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
</RelativeLayout>